feat: CRUD API ticket
